--- a/index.html
+++ b/index.html
@@ -6,32 +6,29 @@
 
   <title>BoardRankCTG — Redirecting…</title>
 
-  <!-- SEO -->
   <meta name="description" content="View unofficial SSC & HSC rankings for Chattogram/Chittagong Board with full marks breakdown. Fast, clean and simple." />
   <meta name="keywords" content="HSC, SSC, Board Rank, Chittagong Board, CTG Board, GPA, Results, Education BD" />
   <meta property="og:title" content="BoardRankCTG" />
   <meta property="og:description" content="View unofficial SSC & HSC rankings for Chattogram/Chittagong Board with full marks breakdown." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://boradrankctg.github.io/" />
+  <meta property="og:url" content="https://boardrankctg-hasnyne.vercel.app/" />
   <meta property="og:image" content="https://boradrankctg.github.io/assets/preview.png" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Favicon -->
+
   <link rel="icon" href="https://boradrankctg.github.io/favicon.png" />
 
-  <!-- Auto redirect including parameters -->
+
   <script>
     (function () {
-      const base = "https://boradrankctg.github.io/index.html";
+      const base = "https://boardrankctg-hasnyne.vercel.app/";
       const params = window.location.search; // everything after ?
 
-      // redirect preserving query parameters
       window.location.replace(base + params);
     })();
   </script>
 
-  <!-- Fallback meta refresh (SEO friendly) -->
-  <meta http-equiv="refresh" content="0; url=https://boradrankctg.github.io/index.html" />
+  <meta http-equiv="refresh" content="0; url=https://boardrankctg-hasnyne.vercel.app/" />
 </head>
 
 <body>
