--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <meta property="og:image" content="https://boradrankctg.github.io/assets/preview.png" />
   <meta name="robots" content="index, follow" />
 
+<section id="seo-blurb">
+<div class="seo-container">
+<h2>SSC Result Rankings — CHITTAGONG Board</h2>
+<p>BoardRankCTG provides <strong>SSC Result Rankings</strong> for the <strong>Chattogram Education Board</strong>, covering <strong>Science</strong>, <strong>Business Studies</strong>, and <strong>Humanities</strong> for 2025, 2024, 2023, and earlier years. Our rankings are accurate, fast, and easy to use.</p>
+<p>Search instantly by student name, roll number, or school, compare scores, and explore the <em>Top 100 institutions</em>. View GPA, total marks, and rank for each student, with shareable links and downloadable data.</p>
+<p>Our platform offers complete year-wise SSC rankings for all streams, including Science, Business Studies, and Humanities. Users can quickly find results using instant search and stream-based filters, making navigation effortless. The dedicated <em>Top 100 Schools</em> view highlights the best-performing institutions in the Chattogram Board area. Every ranking table is fully mobile-friendly and optimized for fast loading, ensuring smooth access on any device. All data can be freely downloaded for offline use, and every record is based on accurate results from verified public sources.</p>
+<p>From <strong>SSC 2025</strong> results to historical rankings, BoardRankCTG is the go-to platform for students, educators, and institutions in the Chattogram Board area.</p>
+</div>
+</section>
 
   <link rel="icon" href="https://boradrankctg.github.io/favicon.png" />
 
