--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="BoardRankCTG" />
   <meta property="og:description" content="View unofficial SSC & HSC rankings for Chattogram/Chittagong Board with full marks breakdown." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://boardrankctg-hasnyne.vercel.app/" />
+  <meta property="og:url" content="https://boardrankctg.netlify.app/" />
   <meta property="og:image" content="https://boradrankctg.github.io/assets/preview.png" />
   <meta name="robots" content="index, follow" />
 
@@ -30,14 +30,14 @@
 
   <script>
     (function () {
-      const base = "https://boardrankctg-hasnyne.vercel.app/";
-      const params = window.location.search; // everything after ?
+      const base = "https://boardrankctg.netlify.app/";
+      const params = window.location.search; //
 
       window.location.replace(base + params);
     })();
   </script>
 
-  <meta http-equiv="refresh" content="0; url=https://boardrankctg-hasnyne.vercel.app/" />
+  <meta http-equiv="refresh" content="0; url=https://boardrankctg.netlify.app/" />
 </head>
 
 <body>
